Mon Jan 05 15:04:12 GMT 2004  Olly Betts <olly@survex.com>

	* include/xapian/base.h: Assigning a normal pointer to a RefCntPtr no
	  longer creates a temporary RefCntPtr from it.

Thu Dec 25 05:49:03 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Changed to merge a batch of
	  changes into a posting list in one pass.

Thu Dec 25 05:48:09 GMT 2003  Olly Betts <olly@survex.com>

	* docs/quartzdesign.html: Some minor improvements.

Thu Dec 25 05:39:57 GMT 2003  Olly Betts <olly@survex.com>

	* tests/api_db.cc: Check returned docids are the expected values in a
	  couple more cases.  Improved wording of a comment.

Thu Dec 25 05:38:43 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_utils.h: Updated explanation of string
	  encoding.

Thu Dec 25 05:37:36 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_values.cc: Fixed problem with dereferencing
	  a pointer to the end of a string in debug output.

Sun Dec 21 23:35:49 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Refactor recently relocated code
	  to reduce duplication.

Sun Dec 21 21:44:07 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Renamed
	  skip_and_check_tname_in_key() to check_tname_in_key() as it doesn't
	  do any sort of skipping!

Sun Dec 21 14:54:49 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc,backends/quartz/quartz_postlist.h,
	  tests/quartztest.cc: Subsumed QuartzPostList::add_entry and
	  QuartzPostList::delete_entry into QuartzPostList::merge_changes.

Sun Dec 21 03:21:42 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc,
	  backends/quartz/quartz_postlist.cc,
	  backends/quartz/quartz_postlist.h: Move merging on postlist changes
	  into QuartzPostList in preparation for an efficient
	  reimplementation.

Sun Dec 21 01:47:07 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.h,