@@ -4,7 +4,7 @@
 /* ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2002,2003 Olly Betts
+ * Copyright 2002,2003,2004 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -72,7 +72,7 @@ class Database {
 
 	/** @internal Create a Database from its internals.
 	 */
-	Database(Internal *internal);
+	explicit Database(Internal *internal);
 
 	/** Destroy this handle on the database.
 	 *
@@ -209,7 +209,7 @@ class WritableDatabase : public Database {
 
 	/** @internal Create an WritableDatabase given its internals.
 	 */
-	WritableDatabase(Database::Internal *internal);
+	explicit WritableDatabase(Database::Internal *internal);
 
         /** Copying is allowed.  The internals are reference counted, so
 	 *  copying is cheap.
