@@ -4,7 +4,7 @@
 /* ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2001,2002 Ananova Ltd
- * Copyright 2002,2003 Olly Betts
+ * Copyright 2002,2003,2004 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -54,7 +54,7 @@ class MSet {
     public:
 	// FIXME: public for now, private would be better
 	/// @internal Constructor for internal use
-	MSet(MSet::Internal * internal_);
+	explicit MSet(MSet::Internal * internal_);
 
 	/// Create an empty Xapian::MSet
 	MSet();
