@@ -4,7 +4,7 @@
 /* ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2003 Olly Betts
+ * Copyright 2003,2004 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -53,7 +53,7 @@ class PositionIterator {
         friend bool operator==(const PositionIterator &a, const PositionIterator &b);
 
 	// FIXME: ought to be private
-	PositionIterator(Internal *internal_);
+	explicit PositionIterator(Internal *internal_);
 
 	/// Default constructor - for declaring an uninitialised iterator
 	PositionIterator();
