@@ -4,7 +4,7 @@
 /* ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2003 Olly Betts
+ * Copyright 2003,2004 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -46,7 +46,7 @@ class PostingIterator {
     private:
 	friend class Database; // So Database can construct us
 
-	PostingIterator(Internal *internal_);
+	explicit PostingIterator(Internal *internal_);
 
     public:
         friend bool operator==(const PostingIterator &a,
