@@ -4,7 +4,7 @@
 /* ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2003 Olly Betts
+ * Copyright 2003,2004 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -54,7 +54,7 @@ class TermIterator {
 
     public:
 	// FIXME: better if this was private...
-	TermIterator(Internal *internal_);
+	explicit TermIterator(Internal *internal_);
 
 	/// Default constructor - for declaring an uninitialised iterator
 	TermIterator();
